@@ -1,3 +1,10 @@
+2022-07-31  Vino Fernando Crescini  <vfcrescini@gmail.com>
+
+	* apps/clock_sensor/standalone_sensor_esp32.py:
+
+	  - Set sensor repeatability/oversampling to "high".
+
+
 2022-07-29  Vino Fernando Crescini  <vfcrescini@gmail.com>
 
 	* apps/clock_sensor/standalone_sensor_esp32.py:
